; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_max8973-regulator.c_max8973_dcdc_set_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_max8973-regulator.c_max8973_dcdc_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.max8973_chip = type { i32, i32 }

@MAX8973_FPWM_EN_M = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@MAX8973_CONTROL1 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"register %d update failed, err %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*, i32)* @max8973_dcdc_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max8973_dcdc_set_mode(%struct.regulator_dev* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.regulator_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.max8973_chip*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.regulator_dev*, %struct.regulator_dev** %4, align 8
  %10 = call %struct.max8973_chip* @rdev_get_drvdata(%struct.regulator_dev* %9)
  store %struct.max8973_chip* %10, %struct.max8973_chip** %6, align 8
  %11 = load i32, i32* %5, align 4
  switch i32 %11, label %15 [
    i32 129, label %12
    i32 128, label %14
  ]

12:                                               ; preds = %2
  %13 = load i32, i32* @MAX8973_FPWM_EN_M, align 4
  store i32 %13, i32* %8, align 4
  br label %18

14:                                               ; preds = %2
  store i32 0, i32* %8, align 4
  br label %18

15:                                               ; preds = %2
  %16 = load i32, i32* @EINVAL, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %3, align 4
  br label %37

18:                                               ; preds = %14, %12
  %19 = load %struct.max8973_chip*, %struct.max8973_chip** %6, align 8
  %20 = getelementptr inbounds %struct.max8973_chip, %struct.max8973_chip* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @MAX8973_CONTROL1, align 4
  %23 = load i32, i32* @MAX8973_FPWM_EN_M, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @regmap_update_bits(i32 %21, i32 %22, i32 %23, i32 %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %18
  %29 = load %struct.max8973_chip*, %struct.max8973_chip** %6, align 8
  %30 = getelementptr inbounds %struct.max8973_chip, %struct.max8973_chip* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @MAX8973_CONTROL1, align 4
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @dev_err(i32 %31, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %32, i32 %33)
  br label %35

35:                                               ; preds = %28, %18
  %36 = load i32, i32* %7, align 4
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %35, %15
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local %struct.max8973_chip* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @dev_err(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
